--- a/.github/workflows/generate_javadocs.yaml
+++ b/.github/workflows/generate_javadocs.yaml
@@ -69,7 +69,7 @@ jobs:
           rm -rf ../site/static/${artifact}/ # Clear any existing files in the output directory
           echo "Generating javadocs for ${artifact}"
           mvn -f ${directory}/pom.xml javadoc:aggregate -Dmaven.javadoc.failOnError=false && mv ${directory}/target/site/apidocs/ ../site/static/${artifact}/
-        done < ../.github/workflows/javadocs_scripts/google-cloud-java_javadocs_modules.txt
+        done < .github/workflows/javadocs_scripts/google-cloud-java_javadocs_modules.txt
 
     - name: Commit Javadocs
       run: |
