--- a/.github/workflows/generate_javadocs_handwritten_libraries.yaml
+++ b/.github/workflows/generate_javadocs_handwritten_libraries.yaml
@@ -29,17 +29,17 @@ jobs:
 
     - name: Generate javadocs for each handwritten library
       run: |
-        while read -r repo directory artifact
+        while read -r repo directory tag artifact
         do
-          echo "ARTIFACT=$artifact"
-          echo "DIRECTORY=$directory"
           echo "REPO=$repo"
+          echo "DIRECTORY=$directory"
+          echo "TAG=$tag"
           echo "Creating and clearing directory for javadocs for ${artifact}"
           mkdir -p site/static/${artifact} # Make sure the output directory exists
           rm -rf site/static/${artifact}/ # Clear any existing files in the output directory
           echo "Cloning into ${repo}"
           git clone https://github.com/${repo}.git
-          git -C "${directory}" checkout $tag #handwriten_libraries_javadocs_modules.txt needs to be updated in the update_site_var.yaml workflow
+          git -C "${directory}" checkout $tag
           echo "Generating javadocs for ${artifact}"
           mvn -f ${directory}/pom.xml javadoc:aggregate -Dmaven.javadoc.failOnError=false && mv ${directory}/target/site/apidocs/ site/static/${artifact}/
         done < .github/workflows/javadocs_scripts/handwritten_libraries_javadocs_modules.txt
