add git pull step to workflows

--- a/.github/workflows/generate_javadocs_sdk-platform-java.yaml
+++ b/.github/workflows/generate_javadocs_sdk-platform-java.yaml
@@ -54,6 +54,7 @@ jobs:
 
     - name: Commit Javadocs
       run: |
+        git pull --rebase origin main
         git -C site/static/ add .
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
