--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -7,6 +7,9 @@ on:
       - main  # Set a branch to deploy
     paths:
       - 'site/**'
+  pull_request:
+    paths:
+    - 'site/**'
 
 # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
