test: see if this triggers gh actions

--- a/site/data/variables.yaml
+++ b/site/data/variables.yaml
@@ -178,3 +178,4 @@ google-cloud-billing: "v2.19.0"
 google-identity-accesscontextmanager: "v1.20.0"
 google-cloud-workflows: "v2.19.0"
 google-cloud-cloudcommerceconsumerprocurement: "v0.17.0"
+test-change: "for auto trigger"
