--- a/.github/workflows/generate_javadocs_google-cloud-java.yaml
+++ b/.github/workflows/generate_javadocs_google-cloud-java.yaml
@@ -1,13 +1,11 @@
 name: Generate Javadocs for google-cloud-java
-# Run this workflow once the site/data/variables.yaml file has been updated
+# Run this workflow once the Javadoc generation for handwritten modules has run
 on:
-  push:
-    paths:
-    - 'site/data/variables.yaml'
-  pull_request:
-    paths:
-    - 'site/data/variables.yaml'
-  workflow_dispatch:
+  workflow_run:
+    workflows: [ "Generate Javadocs for handwritten libraries" ]
+    types:
+    - completed
+    workflow_dispatch:
 
 permissions:
   contents: write
