--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -77,6 +77,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      id-token: write
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
