--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -35,11 +35,12 @@ jobs:
     - name: Update site param for libraries-bom version
       run: |
         echo "Updating Github Pages site param for libraries-bom version"
-        python .github/workflows/javadocs_scripts/update_site_params.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
+        python .github/workflows/javadocs_scripts/update_site_params.py # Run script to update the site/config.toml file for the libraries_bom version
 
+    #TODO: @alicejli add in auth library once v1.18.0 is added as a dependency within sdk-platform-java
     - name: Update repo_versions
       run: |
-        echo "Run update_repo_versions"
+        echo "Updating repo versions for checkout and handwritten modules"
         python .github/workflows/javadocs_scripts/update_repo_versions.py # Run script to update the handwritten_libraries_javadocs_modules.txt and repos_for_versionstxt.txt files
 
     - name: Read repo, directory, and tag from file and clone repo
@@ -53,12 +54,21 @@ jobs:
           git -C "${directory}" checkout $tag
           echo "Updating variables.yaml file using ${repo}'s version.txt file"
           python .github/workflows/javadocs_scripts/parse_versionstxt_addl_repos.py ${directory}/versions.txt
+          if [[ "$repo" == "googleapis/google-cloud-java" ]]; then
+            python updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
+            python .github/workflows/javadocs_scripts/update_googlecloudjava_javadocs_modules.py ${directory}/versions.txt # Update for any new modules in google-cloud-java
+          fi
         done < .github/workflows/javadocs_scripts/repos_for_versionstxt.txt
+
+    - name: Update libraryTable
+      run: |
+        echo "Updating libraryTable"
+        python .github/workflows/javadocs_scripts/libraryTable_generation.py # Run script to update the table of modules
 
     - name: Commit and push changes
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add ./site/data/variables.yaml ./site/config.toml
+        git add $(git diff --name-only | grep "^site/")
         git commit -m "Update Github Pages site variables - automated" || true
         git push
