--- a/site/data/name_pretty.yaml
+++ b/site/data/name_pretty.yaml
@@ -158,3 +158,4 @@ google-cloud-monitoring-metricsscope: "Monitoring Metrics Scopes"
 google-cloud-aiplatform: "Vertex AI"
 google-cloud-cloudcommerceconsumerprocurement: "Cloud Commerce Consumer Procurement"
 google-cloud-speech: "Cloud Speech"
+google-auth-library: "Google Auth Library"
