--- a/site/data/variables.yaml
+++ b/site/data/variables.yaml
@@ -178,3 +178,4 @@ google-cloud-language: "v2.20.0"
 google-cloud-contentwarehouse: "v0.15.0"
 google-cloud-gke-connect-gateway: "v0.20.0"
 google-cloud-bigquerydatapolicy: "v0.16.0"
+google-auth-library: "v1.18.0"
