--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -37,7 +37,6 @@ jobs:
         echo "Updating Github Pages site param for libraries-bom version"
         python .github/workflows/javadocs_scripts/update_site_params.py # Run script to update the site/config.toml file for the libraries_bom version
 
-    #TODO: @alicejli add in auth library once v1.18.0 is added as a dependency within sdk-platform-java
     - name: Update repo_versions
       run: |
         echo "Updating repo versions for checkout and handwritten modules"
@@ -57,6 +56,9 @@ jobs:
           if [[ "$repo" == "googleapis/google-cloud-java" ]]; then
             python .github/workflows/javadocs_scripts/updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
             python .github/workflows/javadocs_scripts/update_googlecloudjava_javadocs_modules.py ${directory}/versions.txt # Update for any new modules in google-cloud-java
+          fi
+          if [[ "$repo" == "googleapis/sdk-platform-java" ]]; then
+            python .github/workflows/javadocs_scripts/parse_pom_auth_library.py ${directory}/gapic-generator-java-pom-parent/pom.xml # Update auth library version
           fi
         done < .github/workflows/javadocs_scripts/repos_for_versionstxt.txt
 
