--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -51,13 +51,15 @@ jobs:
           echo "TAG=$tag"
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
-          echo "Updating variables.yaml file using ${repo}'s version.txt file"
+          echo "Updating variables.yaml file using ${repo}'s versions.txt file"
           python .github/workflows/javadocs_scripts/parse_versionstxt_addl_repos.py ${directory}/versions.txt
           if [[ "$repo" == "googleapis/google-cloud-java" ]]; then
+            echo "Updating variables.yaml file using ${repo}'s versions.txt file as well as client/product links"
             python .github/workflows/javadocs_scripts/updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
             python .github/workflows/javadocs_scripts/update_googlecloudjava_javadocs_modules.py ${directory}/versions.txt # Update for any new modules in google-cloud-java
           fi
           if [[ "$repo" == "googleapis/sdk-platform-java" ]]; then
+            echo "Updating variables.yaml file for the auth library"
             python .github/workflows/javadocs_scripts/parse_pom_auth_library.py ${directory}/gapic-generator-java-pom-parent/pom.xml # Update auth library version
           fi
         done < .github/workflows/javadocs_scripts/repos_for_versionstxt.txt
