--- a/.github/workflows/generate_javadocs_handwritten_libraries.yaml
+++ b/.github/workflows/generate_javadocs_handwritten_libraries.yaml
@@ -13,8 +13,10 @@ permissions:
   id-token: write
 
 jobs:
+  on-success:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
   build:
-
     runs-on: ubuntu-latest
 
     steps:
