--- a/.github/workflows/generate_javadocs_sdk-platform-java.yaml
+++ b/.github/workflows/generate_javadocs_sdk-platform-java.yaml
@@ -13,10 +13,11 @@ permissions:
   id-token: write
 
 jobs:
-  build:
-
+  on-success:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  build:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout this repo
       uses: actions/checkout@v3
