--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,16 +1,11 @@
 name: GitHub Pages
 
-# Run this workflow when there's a change made to the content within the `site` directory
+# Run this workflow after javadocs are generated, or on manual trigger
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'site/**'
-  pull_request:
-    types: [closed]
-    paths:
-      - 'site/**'
+  workflow_run:
+    workflows: [ "Generate Javadocs for google-cloud-java" ]
+    types:
+    - completed
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
