remove google-cloud-java_javadocs_modules.txt as it will get generated with the update_site_var workflow. Update name of job in generate_javadocs_sdk-platform-java.yaml

--- a/.github/workflows/generate_javadocs_sdk-platform-java.yaml
+++ b/.github/workflows/generate_javadocs_sdk-platform-java.yaml
@@ -27,7 +27,7 @@ jobs:
         java-version: 11
         cache: maven
 
-    - name: Save checkout tags for sdk-platform-java, google-cloud-java, and handwritten libraries
+    - name: Save checkout tags for sdk-platform-java
       id: save-tags
       run: |
         SDK_PLATFORM_JAVA="google-cloud-shared-dependencies"
