--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Create and update initial variables.yaml
       run: |
         echo "Creating initial variables.yaml file..."
-        python .github/workflows/javadocs_scripts/parse_versionstxt.py # Run script to update the site/data/variables.yaml file for the libraries_bom version
+        python .github/workflows/javadocs_scripts/parse_versionstxt.py ./versions.txt # Run script to update the site/data/variables.yaml file for the libraries_bom version
 
     - name: Update variables.yaml using google-cloud-bom and libraries-bom POM.xml
       run: |
@@ -51,7 +51,7 @@ jobs:
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
           echo "Updating variables.yaml file using ${repo}'s versions.txt file"
-          python .github/workflows/javadocs_scripts/parse_versionstxt_addl_repos.py ${directory}/versions.txt
+          python .github/workflows/javadocs_scripts/parse_versionstxt.py ${directory}/versions.txt
           if [[ "$repo" == "googleapis/google-cloud-java" ]]; then
             echo "Updating variables.yaml file using ${repo}'s versions.txt file as well as client/product links"
             python .github/workflows/javadocs_scripts/updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
