update to match changed PR

--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -24,12 +24,12 @@ jobs:
     - name: Create and update initial javaModulesVersions.yaml
       run: |
         echo "Creating initial variables.yaml file..."
-        python .github/workflows/javadocs_scripts/parse_versionstxt.py ./versions.txt # Run script to update the site/data/variables.yaml file for the libraries_bom version
+        python .github/workflows/javadocs_scripts/parse_versionstxt.py # Run script to update the site/data/javaModulesVersions.yaml file for the libraries_bom version
 
     - name: Update javaModulesVersions.yaml using google-cloud-bom and libraries-bom POM.xml
       run: |
         echo "Updating variables.yaml file using google-cloud-bom and libraries-bom POM.xml files..."
-        python .github/workflows/javadocs_scripts/parse_pom.py # Run script to update the site/data/variables.yaml file for the gapic_libraries_bom version and handwritten library versions
+        python .github/workflows/javadocs_scripts/parse_pom.py ./versions.txt # Run script to update the site/data/javaModulesVersions.yaml file for the gapic_libraries_bom version and handwritten library versions
 
     - name: Update site param for libraries-bom version
       run: |
