--- a/.github/workflows/generate_javadocs_google-cloud-java.yaml
+++ b/.github/workflows/generate_javadocs_google-cloud-java.yaml
@@ -31,7 +31,7 @@ jobs:
       id: save-tags
       run: |
         GOOGLE_CLOUD_JAVA="gapic-libraries-bom"
-        VARIABLES_FILE="site/data/variables.yaml"
+        VARIABLES_FILE="site/data/javaModulesVersions.yaml"
 
         GOOGLE_CLOUD_JAVA_TAG=$(grep -oP "(?<=${GOOGLE_CLOUD_JAVA}: \")[^\"]*" "$VARIABLES_FILE" | tr -d '\n')
         echo "GOOGLE_CLOUD_JAVA_TAG=$GOOGLE_CLOUD_JAVA_TAG" >> $GITHUB_ENV
