--- a/.github/workflows/generate_javadocs_sdk-platform-java.yaml
+++ b/.github/workflows/generate_javadocs_sdk-platform-java.yaml
@@ -27,11 +27,11 @@ jobs:
         java-version: 11
         cache: maven
 
-    - name: Save checkout tags for sdk-platform-java, google-cloud-java, and handwritten libraries
+    - name: Save checkout tags for sdk-platform-java
       id: save-tags
       run: |
         SDK_PLATFORM_JAVA="google-cloud-shared-dependencies"
-        VARIABLES_FILE="site/data/variables.yaml"
+        VARIABLES_FILE="site/data/javaModulesVersions.yaml"
 
         SDK_PLATFORM_JAVA_TAG=$(grep -oP "(?<=${SDK_PLATFORM_JAVA}: \")[^\"]*" "$VARIABLES_FILE" | tr -d '\n')
         echo "SDK_PLATFORM_JAVA_TAG=$SDK_PLATFORM_JAVA_TAG" >> $GITHUB_ENV
