--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Update javaModulesVersions.yaml using google-cloud-bom and libraries-bom POM.xml
       run: |
-        echo "Updating variables.yaml file using google-cloud-bom and libraries-bom POM.xml files..."
+        echo "Updating javaModulesVersions.yaml file using google-cloud-bom and libraries-bom POM.xml files..."
         python .github/workflows/javadocs_scripts/parse_pom.py # Run script to update the site/data/javaModulesVersions.yaml file for the gapic_libraries_bom version and handwritten library versions
 
     - name: Update site param for libraries-bom version
@@ -50,11 +50,12 @@ jobs:
           echo "TAG=$tag"
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
-          echo "Updating variables.yaml file using ${repo}'s versions.txt file"
+          echo "Updating javaModulesVersions.yaml file using ${repo}'s versions.txt file"
           python .github/workflows/javadocs_scripts/parse_versionstxt.py ${directory}/versions.txt
           if [[ "$repo" == "googleapis/google-cloud-java" ]]; then
-            echo "Updating variables.yaml file using ${repo}'s versions.txt file as well as client/product links"
+            echo "Updating javaModulesLibraryReferenceLinks.yaml, javaModulesNamePretty.yaml, and javaModulesProductReferenceLinks.yaml files using ${repo}'s client/product links"
             python .github/workflows/javadocs_scripts/updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
+            echo "Updating google-cloud-java_javadocs_modules.txt"
             python .github/workflows/javadocs_scripts/update_googlecloudjava_javadocs_modules.py ${directory}/versions.txt # Update for any new modules in google-cloud-java
           fi
           if [[ "$repo" == "googleapis/sdk-platform-java" ]]; then
@@ -85,6 +86,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add $(git diff --name-only | grep "^site/")
+        git -C site/ add .
         git commit -m "Update Github Pages site variables - automated" || true
         git push
