--- a/.github/workflows/generate_javadocs_handwritten_libraries.yaml
+++ b/.github/workflows/generate_javadocs_handwritten_libraries.yaml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: [ "Generate Javadocs for sdk-platform-java modules" ]
     types:
-      - completed
+    - completed
     workflow_dispatch:
 
 permissions:
@@ -42,7 +42,7 @@ jobs:
           git -C "${directory}" checkout $tag
           echo "Generating javadocs for ${artifact}"
           mvn -f ${directory}/pom.xml javadoc:aggregate -Dmaven.javadoc.failOnError=false && mv ${directory}/target/site/apidocs/ site/static/${artifact}/
-        done < .github/workflows/javadocs_scripts/handwritten_libraries_javadocs_modules.txt
+        done < site/data/handwritten_libraries_javadocs_modules.txt
 
     - name: Commit Javadocs
       run: |
