--- a/.github/workflows/generate_javadocs_sdk-platform-java.yaml
+++ b/.github/workflows/generate_javadocs_sdk-platform-java.yaml
@@ -31,7 +31,7 @@ jobs:
       id: save-tags
       run: |
         SDK_PLATFORM_JAVA="google-cloud-shared-dependencies"
-        VARIABLES_FILE="site/data/variables.yaml"
+        VARIABLES_FILE="site/data/javaModulesVersions.yaml"
 
         SDK_PLATFORM_JAVA_TAG=$(grep -oP "(?<=${SDK_PLATFORM_JAVA}: \")[^\"]*" "$VARIABLES_FILE" | tr -d '\n')
         echo "SDK_PLATFORM_JAVA_TAG=$SDK_PLATFORM_JAVA_TAG" >> $GITHUB_ENV
@@ -50,7 +50,7 @@ jobs:
           rm -rf ../site/static/${artifact}/ # Clear any existing files in the output directory
           echo "Generating javadocs for ${artifact}"
           mvn -f ${directory}/pom.xml javadoc:aggregate -Dmaven.javadoc.failOnError=false && mv ${directory}/target/site/apidocs/ ../site/static/${artifact}/
-        done < ../.github/workflows/javadocs_scripts/sdk-platform-java_javadocs_modules.txt
+        done < ../site/data/sdk-platform-java_javadocs_modules.txt
 
     - name: Commit Javadocs
       run: |
