--- a/.github/workflows/update_site_var.yaml
+++ b/.github/workflows/update_site_var.yaml
@@ -23,13 +23,13 @@ jobs:
 
     - name: Create and update initial javaModulesVersions.yaml
       run: |
-        echo "Creating initial variables.yaml file..."
-        python .github/workflows/javadocs_scripts/parse_versionstxt.py # Run script to update the site/data/javaModulesVersions.yaml file for the libraries_bom version
+        echo "Creating initial javaModulesVersions.yaml file..."
+        python .github/workflows/javadocs_scripts/parse_versionstxt.py ./versions.txt # Run script to update the site/data/javaModulesVersions.yaml file for the libraries_bom version
 
     - name: Update javaModulesVersions.yaml using google-cloud-bom and libraries-bom POM.xml
       run: |
-        echo "Updating variables.yaml file using google-cloud-bom and libraries-bom POM.xml files..."
-        python .github/workflows/javadocs_scripts/parse_pom.py ./versions.txt # Run script to update the site/data/javaModulesVersions.yaml file for the gapic_libraries_bom version and handwritten library versions
+        echo "Updating javaModulesVersions.yaml file using google-cloud-bom and libraries-bom POM.xml files..."
+        python .github/workflows/javadocs_scripts/parse_pom.py # Run script to update the site/data/javaModulesVersions.yaml file for the gapic_libraries_bom version and handwritten library versions
 
     - name: Update site param for libraries-bom version
       run: |
@@ -50,18 +50,19 @@ jobs:
           echo "TAG=$tag"
           git clone https://github.com/${repo}.git
           git -C "${directory}" checkout $tag
-          echo "Updating variables.yaml file using ${repo}'s versions.txt file"
+          echo "Updating javaModulesVersions.yaml file using ${repo}'s versions.txt file"
           python .github/workflows/javadocs_scripts/parse_versionstxt.py ${directory}/versions.txt
           if [[ "$repo" == "googleapis/google-cloud-java" ]]; then
-            echo "Updating variables.yaml file using ${repo}'s versions.txt file as well as client/product links"
+            echo "Updating javaModulesLibraryReferenceLinks.yaml, javaModulesNamePretty.yaml, and javaModulesProductReferenceLinks.yaml files using ${repo}'s client/product links"
             python .github/workflows/javadocs_scripts/updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
+            echo "Updating google-cloud-java_javadocs_modules.txt"
             python .github/workflows/javadocs_scripts/update_googlecloudjava_javadocs_modules.py ${directory}/versions.txt # Update for any new modules in google-cloud-java
           fi
           if [[ "$repo" == "googleapis/sdk-platform-java" ]]; then
             echo "Updating variables.yaml file for the auth library"
             python .github/workflows/javadocs_scripts/parse_pom_auth_library.py ${directory}/gapic-generator-java-pom-parent/pom.xml # Update auth library version
           fi
-        done < .github/workflows/javadocs_scripts/repos_for_versionstxt.txt
+        done < site/data/repos_for_versionstxt.txt
 
     - name: Update links for handwritten libraries
       run: |
@@ -74,7 +75,7 @@ jobs:
           git -C "${directory}" checkout $tag
           echo "Updating client and product documentation links using ${repo}'s .repo-metadata.json file"
           python .github/workflows/javadocs_scripts/updateClientProductDocumentationLinks.py # Update client/product doc links based on .repo-metadata.json files
-        done < .github/workflows/javadocs_scripts/handwritten_libraries_javadocs_modules.txt
+        done < site/data/handwritten_libraries_javadocs_modules.txt
 
     - name: Update libraryTable
       run: |
@@ -85,6 +86,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add $(git diff --name-only | grep "^site/")
+        git -C site/ add .
         git commit -m "Update Github Pages site variables - automated" || true
         git push
